[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "security-agent-ai"
version = "0.1.0"
description = "AI-powered security scanner: OWASP Top 10, hardcoded secrets, and insecure dependencies."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["security", "sast", "owasp", "ai", "claude", "anthropic"]

dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
security-agent = "security_agent.cli:main"

[project.urls]
Repository = "https://github.com/example/security-agent-ai"

[tool.hatch.build.targets.wheel]
packages = ["security_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
branch = true
source = ["security_agent"]
